test/positive/empty_input_list.net
INPUT
OUTPUT a
VAR a
IN
a = 1
