test/negative/missing_digit_after_radix_prefix.net
INPUT
OUTPUT b
VAR b
IN
b = 0x
